Include Xcode internal files in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,64 @@
-.idea
-.DS_Store
+# Xcode
+##
+build/
+DerivedData/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata/
+*.xccheckout
+*.moved-aside
+*.xcscmblueprint
 *.xcuserstate
+
+# Swift Package Manager
+##
+.build/
+Packages/
+*.swiftpm
+
+# CocoaPods
+##
+Pods/
+Podfile.lock
+
+# Carthage
+##
+Carthage/
+carthage-*.plist
+
+# Fastlane
+##
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots/**/*.png
+fastlane/test_output
+
+# Mac OS
+##
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Code Injection
+inject_tmp/
+
+# JetBrains IDEs
+.idea/
